2007-10-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Cliff Lawson and Carlos Lamas:
	Patch #5343: Add a util/setbaud.h "helper" file
	* include/util/setbaud.h: New file.
	* include/util/Makefile.am: Include setbaud.h.

2007-10-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dean Camera:
	Patch #5756: New atomic.h header file
	* include/util/atomic.h: New file.
	* include/util/Makefile.am: Include atomic.h.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/iocanxx.h (OVFG): Define.
	Closes bug #21434.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/io90pwmx.h (AMP0EN, AMP0IS, AMP0G1, AMP0G0, AMP0TS1, 
	AMP0TS0, AMP1EN, AMP1IS, AMP1G1, AMP1G0, AMP1TS1, AMP1TS0, 
	ADASCR): Define.
	Closes bug #20435.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/io2313.h (TICIE1): Define.
	Closes bug #20682.

2007-10-25  Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn13.h (EIN1D): Rename to AIN1D.
	Closes bug #21411.

2007-10-24  Eric B. Weddington  <eweddington@cso.atmel.com>

	Add Lockbits API. Set the lockbits from within the application.
	* include/avr/Makefile.am: Add new file to distribution.
	* include/avr/io.h: Include new lock.h file.
	* include/avr/iom128.h: Add definitions for API.
	* include/avr/iom48.h: Ditto.
	* include/avr/iom88.h: Ditto.
	* include/avr/iom168.h: Ditto.
	* include/avr/lock.h: New file.

2007-10-23 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add new devices: ATmega48P/88P/168P/328P.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom168p.h: New file.
	* include/avr/iom328p.h: New file.
	* include/avr/iom48p.h: New file.
	* include/avr/iom88p.h: New file.
	* include/avr/iomx8p.h: New file.
	* NEWS: Add devices to list.

2007-10-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
